--- a/www/themes/business/css/marketlisting.css
+++ b/www/themes/business/css/marketlisting.css
@@ -1,1 +1,218 @@
-/*  Theme Name: Business-Supermarket.com Theme     URI: http://Business-Supermarket.com    Description:     These are additional styles created for modules 16d    Title       : Market my listing    Author      :     Author email:     Version     : 0.1*//*  Put name of module in this comment that the styles refer to i.e points module, banner module etc  */.marketing_tab {    float: left;    margin: 0 25px;    width: 580px;}.download_tab {    float: left;    margin: 0 5px;    width: 580px;}.heading_part {    float: left;    text-align: center;    width: 100%;}.paging {    float: right;}.marketing_tab .add-carousel {    margin: 10px 0 0;}.uploader-field {    float: left;    margin-right: 20px;    width: 415px;}.table_style1 {    width: 100%;    text-align: center;    margin-bottom: 10px;}.table_style1 tr {    background: #eeeded;    height: 30px;}.table_style1 tr:first-child {    background: none;}.table_style1 th {    color: #A84793;}.table_style1 td {    border-top: 1px solid #abbe92;    border-right: 1px solid #abbe92;    font-size: 14px;    padding: 4px 30px;}.table_style1 td:first-child {    border-left: 1px solid #abbe92;}.table_style1 tr:last-child td {    border-bottom: 1px solid #abbe92;}.table_style1 tr:nth-child(2n+3) {    background-color: #EADDED;}.table_style2 {    float: left;    width: 100%;}.marketing_tab h3 {    margin-bottom: 4px;}.heading_part {    margin-bottom: 20px;}.row {    float: left;    margin-bottom: 20px;    border-bottom: 3px solid #94BE36;    padding-bottom: 20px;    width: 600px;}.download {    margin-bottom: 20px;    border-bottom: 1px solid #94BE36;    padding-bottom: 20px;    width: 630px;}.marketing_tab textarea {    border: 1px solid #A84793;    float: left;    margin-top: 5px;    resize: none;    width: 100%;    height: 70px;    margin-bottom: 20px;}.full_width {    width: 100%;}input, textarea {    border: 1px solid #A84793;    padding: 4px;}label.heading {    color: #A84793;    /*font-size: 12px;*/}.submit {    background: url(../images/btn-bg.gif) no-repeat;    border: none;    width: 35px;}p.market_p {    color: #565656;    float: left;    margin-bottom: 20px;    width: 100%;}/* -----------------------------------------------------------------------------    User listing marketing tools page styling------------------------------------------------------------------------------*/ul#sl-front-page {    height: 250px;    margin: 70px auto;    width: 400px;}ul#sl-front-page li {    list-style-type: none;    margin: 30px 0;}ul#sl-front-page li h2 {    color: #A84793;    font-family: AuraBoldRegular, Helvetica, Arial;}/* ----------------------------------------------------------        Marketing Data ------------------------------------------------------------*/.sl-financial label {    font-size: 11px;}.nav-button {    display: inline-flex;    position: absolute;    cursor: pointer;    z-index: 1234;}.nav-button a.prev {    margin-left: 45px;    margin-top: -45px;    height: 17px;    width: 17px;    background-image: url("../images/buttons/prev.png");    background-repeat: no-repeat;    cursor: pointer;}.nav-button a.next {    margin-left: 835px;    margin-top: -45px;    height: 17px;    width: 17px;    background-image: url("../images/buttons/next.png");    background-repeat: no-repeat;    cursor: pointer;}#graph, #world-map {    min-height: 420px !important;}.chartDuration {    position: absolute;    left: 43%;    font-size: 13px;    color: #A84793;    margin-bottom: 10px;    margin-top: 32px;}.world-map-container {    /*margin-top: 20px;*/}.world-map-title {    font-size: 14px;    text-align: center;    color: #929292;    font-family: sans-serif;    line-height: 1.5;}.world-map-duration {    font-size: 13px;    color: #A84793;    margin-bottom: 10px;    text-align: center;}#world-map {    width: 90%;    /*height: 400px;*/    margin-left: 40px;    overflow: hidden;}
+.marketing_tab
+{
+    float: left;
+    margin: 0 25px;
+    width: 580px;
+}
+.download_tab
+{
+    float: left;
+    margin: 0 5px;
+    width: 580px;
+}
+.heading_part
+{
+    float: left;
+    text-align: center;
+    width: 100%;
+}
+.paging
+{
+    float: right;
+}
+.marketing_tab .add-carousel
+{
+    margin: 10px 0 0;
+}
+.uploader-field
+{
+    float: left;
+    margin-right: 20px;
+    width: 415px;
+}
+.table_style1
+{
+    margin-bottom: 10px;
+    text-align: center;
+    width: 100%;
+}
+.table_style1 tr
+{
+    background: #eeeded;
+    height: 30px;
+}
+.table_style1 tr:first-child
+{
+    background: none;
+}
+.table_style1 th
+{
+    color: #A84793;
+}
+.table_style1 td
+{
+    border-right: 1px solid #abbe92;
+    border-top: 1px solid #abbe92;
+    font-size: 14px;
+    padding: 4px 30px;
+}
+.table_style1 td:first-child
+{
+    border-left: 1px solid #abbe92;
+}
+.table_style1 tr:last-child td
+{
+    border-bottom: 1px solid #abbe92;
+}
+.table_style1 tr:nth-child(2n+3)
+{
+    background-color: #EADDED;
+}
+.table_style2
+{
+    float: left;
+    width: 100%;
+}
+.marketing_tab h3
+{
+    margin-bottom: 4px;
+}
+.heading_part
+{
+    margin-bottom: 20px;
+}
+.row
+{
+    border-bottom: 3px solid #94BE36;
+    float: left;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    width: 600px;
+}
+.download
+{
+    border-bottom: 1px solid #94BE36;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    width: 630px;
+}
+.marketing_tab textarea
+{
+    border: 1px solid #A84793;
+    float: left;
+    height: 70px;
+    margin-bottom: 20px;
+    margin-top: 5px;
+    resize: none;
+    width: 100%;
+}
+.full_width
+{
+    width: 100%;
+}
+input, textarea
+{
+    border: 1px solid #A84793;
+    padding: 4px;
+}
+label.heading
+{
+    color: #A84793;
+}
+.submit
+{
+    background: url(../images/btn-bg.gif) no-repeat;
+    border: none;
+    width: 35px;
+}
+p.market_p
+{
+    color: #565656;
+    float: left;
+    margin-bottom: 20px;
+    width: 100%;
+}
+ul#sl-front-page
+{
+    height: 524px;
+    margin:-18px 0 0 12px;
+    width: 612px;
+}
+ul#sl-front-page li
+{
+    list-style-type: none;
+    margin: 30px 0;
+}
+ul#sl-front-page li h2
+{
+    color: #A84793;
+    font-family: AuraBoldRegular, Helvetica, Arial;
+}
+.sl-financial label
+{
+    font-size: 11px;
+}
+.nav-button
+{
+    cursor: pointer;
+    display: inline-flex;
+    position: absolute;
+    z-index: 1234;
+}
+.nav-button a.prev
+{
+    background-image: url("../images/buttons/prev.png");
+    background-repeat: no-repeat;
+    cursor: pointer;
+    height: 17px;
+    margin-left: 45px;
+    margin-top: -45px;
+    width: 17px;
+}
+.nav-button a.next
+{
+    background-image: url("../images/buttons/next.png");
+    background-repeat: no-repeat;
+    cursor: pointer;
+    height: 17px;
+    margin-left: 835px;
+    margin-top: -45px;
+    width: 17px;
+}
+#graph, #world-map
+{
+    min-height: 420px !important;
+}
+.chartDuration
+{
+    color: #A84793;
+    font-size: 13px;
+    left: 43%;
+    margin-bottom: 10px;
+    margin-top: 32px;
+    position: absolute;
+}
+.world-map-container
+{
+}
+.world-map-title
+{
+    color: #929292;
+    font-family: sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: center;
+}
+.world-map-duration
+{
+    color: #A84793;
+    font-size: 13px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+#world-map
+{
+    margin-left: 40px;
+    overflow: hidden;
+    width: 90%;
+}
