--- a/www/themes/business/css/style.css
+++ b/www/themes/business/css/style.css
@@ -2078,3 +2078,19 @@ hr {
     text-decoration: none;
     white-space: nowrap; margin-top:1.5px; 
 }
+
+
+#payment_robot_pic{
+    text-align: center;
+}
+
+.payment_success_container{
+    text-align: center;
+    width: 55%;
+    margin:auto;
+}
+
+
+.size-12{
+    font-size: 12px !important;
+}
