--- a/www/themes/business/css/samples.css
+++ b/www/themes/business/css/samples.css
@@ -340,3 +340,11 @@ p.voicetext
     font-style: italic;
     text-align:center
 }
+
+.sample_submit {
+    background: #ecdeed !important;
+}
+
+.amountselectnew .flow_left {
+    padding-right: 5px;
+}
