Removed all referances from bussiness-supermarket.com to businessinvention. Note some links may have been overlooked in which case they will need updating. I have updated all that i can find but there is a possibilty that i may have missed some.

--- a/www/themes/business/css/ManageFinancials.css
+++ b/www/themes/business/css/ManageFinancials.css
@@ -1,5 +1,5 @@
 /*  Theme Name: BusinessSupermarketTheme 
-    URI: http://www.business-supermarket.com 
+    URI: http://www.businessinvention.com 
     User my account manage my finacials styling
     Module name: ManageFinancials
     Module revision: Rev1.0
