--- a/www/themes/business/css/VoiceOpinion.css
+++ b/www/themes/business/css/VoiceOpinion.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: BusinessSupermarketTheme 
-URI: http://www.business-supermarket.com     
-Description: This is a custom theme developed for Business-Supermarket.com  
+URI: http://www.businessinvention.com     
+Description: This is a custom theme developed for Business Invention.com 
 Author: Jaginder Singh Mudhar   
 Author email: dsp7@blueyonder.co.uk  
 Date: 17/09/2015    
