--- a/www/themes/business/css/business_listing.css
+++ b/www/themes/business/css/business_listing.css
@@ -1,5 +1,5 @@
 /*  Theme Name: BusinessTheme 
-    URI: http://www.business-supermarket.com 
+    URI: http://www.businessinvention.com 
 	Description: These are additional styles created for business listing modules
     Title       : BusinessListing CSS
     Author      : Anand
