--- a/www/themes/business/css/faq.css
+++ b/www/themes/business/css/faq.css
@@ -1,5 +1,5 @@
 /*  Theme Name: BusinessSupermarketTheme 
-    URI: http://www.business-supermarket.com 
+    URI: http://www.businessinvention.com 
 	Additional banner advert slider styles
     Module name:
     Module revision:
