--- a/www/themes/business/css/media.css
+++ b/www/themes/business/css/media.css
@@ -1,6 +1,6 @@
 /*  Theme Name: BusinessSupermarketTheme 
-    URI: http://www.business-supermarket.com 
-	Description: This is a custom theme developed for Business-Supermarket.com
+    URI: http://www.businessinvention.com 
+	Description: This is a custom theme developed for Business Invention.com
     Author: Jaginder Singh Mudhar
     Author email: dsp7@blueyonder.co.uk
 	Date: 11/01/2015
