--- a/www/themes/business/css/search.css
+++ b/www/themes/business/css/search.css
@@ -1,5 +1,5 @@
 /*  Theme Name: BusinessTheme 
-    URI: http://www.business-supermarket.com 
+    URI: http://www.businessinvention.com 
 	Description: These are additional styles created for search module
     Title       : Search CSS
     Author      : Anand
