--- a/www/themes/business/css/user_listing.css
+++ b/www/themes/business/css/user_listing.css
@@ -1,5 +1,5 @@
 /*  Theme Name: BusinessTheme
-    URI: http://www.business-supermarket.com
+    URI: http://www.businessinvention.com
     Description: These are additional styles created for listing modules
     Title       : Listing CSS
     Author      : Jag
